syntax = "proto2";

package protostuff_unittest;

message SampleMessage {
    oneof test_oneof {
        optional string name = 4;
    }
}

