syntax = "proto3";

package protostuff_unittest;

import "google/protobuf/descriptor.proto";

option optimize_for = NON_EXISTING_ENUM_CONSTANT;